# yap

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Features.md  LICENSE  README.md  Usage.md  YAP.sln  Yap.sln  compile_commands.json  generate_asm.py  vcpkg.json
Installer/: LICENSES  build.bat  build.sh  clean.bat  copy.bat  main.nsi  yap.bat
SDK/: SDK.vcxproj  SDK.vcxproj.filters  yap.h  yap.h.in  yap.rc.in  yap_sdk.cpp
YAP/: LzmaDec_DecodeReal.raw  SHA256.raw  YAP.vcxproj  YAP.vcxproj.filters  Yap.vcxproj  asm.cpp  asm.hpp  asmtranslations.hpp  assembler.cpp  assembler.h  assembler.hpp  font.hpp  gui.cpp  gui.hpp  icons.h  imgui_impl_dx11.cpp  imgui_impl_glfw.cpp  main.cpp  packer.cpp  packer.hpp  pe.cpp  pe.hpp  platform.hpp  util.h  util.hpp  version.hpp.in  vm.cpp  vm.hpp  vm_types.hpp
YAP/include/: LzmaDecode.raw  asm.hpp  assembler.hpp  debugger.hpp  font.hpp  gui.hpp  icons.hpp  packer.hpp  pe.hpp  theme.hpp  util.hpp  version.hpp.in  vm.hpp  vm_types.hpp
YAP/meta/: YAPClient.rc.in  asmjit.rc  glfw3.rc  imgui.rc  lzma.rc  zydis.rc
YAP/src/: asm.cpp  assembler.cpp  debugger.cpp  gui.cpp  main.cpp  packer.cpp  pe.cpp  util.cpp  vm.cpp
YAP/src/modules/: anti-debug-main.asm  anti-dump.asm  anti-sandbox.asm  anti-sideloading.asm  anti-vm.asm  critical.asm  decoder.asm  importer.asm  loader-functions.asm  loader.asm  masquerading.asm  ms-signing.asm  sdk.asm  segment-unpacker.asm  substitution.asm  tls.asm
Yap/: LzmaDec_DecodeToDic.raw  LzmaDec_TryDummy.raw  Yap.vcxproj  Yap.vcxproj.filters  asm.cpp  asm.hpp  font.hpp  gui.cpp  gui.hpp  main.cpp  packer.cpp  packer.hpp  pe.cpp  pe.hpp  util.h  vm.cpp  vm.hpp  zyasm.cpp  zyasm.hpp
docs/: building.md  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  features.md  footer.html  header.html
docs/licenses/: AsmJit.md  Doxygen-Awesome.md  LZMA.md  Zydis.md
tests/: test.cpp  tester.cpp
tests/combo/0/: p.yaproj
tests/combo/1/: p.yaproj
tests/combo/2/: p.yaproj
tests/combo/3/: p.yaproj
tests/combo/packer-reasm/: 0.yaproj  1.yaproj  2.yaproj  3.yaproj  4.yaproj  all.yaproj  partial_loading.yaproj
tests/packer/: 0.yaproj  1.yaproj  2.yaproj  3.yaproj  4.yaproj  5.yaproj  6.yaproj  7.yaproj  all-release.yaproj  all.yaproj
tests/packer/0/: p.yaproj
tests/packer/1/: p.yaproj
tests/packer/2/: p.yaproj
tests/packer/3/: p.yaproj
tests/packer/4/: p.yaproj
tests/packer/5/: p.yaproj
tests/packer/6/: p.yaproj
tests/packer/7/: p.yaproj
tests/reasm/: 0.yaproj  1.yaproj  2.yaproj  3.yaproj  all.yaproj
tests/reasm/0/: p.yaproj
